# niri-apps

./: .gitignore  Cargo.toml  README.md  example.yaml
src/: config.rs  ipc.rs  main.rs
