[package]
name = "niri-apps"
version = "0.1.0"
edition = "2024"
description = "Declarative application spawner for the Niri Wayland compositor"
license = "MIT"
repository = "https://github.com/ian-ross/niri-apps"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
niri-ipc = "25.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
